added benchtool-rust via dinamic feature

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -194,8 +194,8 @@
             android:layout_height="wrap_content"
             app:srcCompat="@android:drawable/ic_media_play"
             app:layout_anchor="@id/bottomAppBar"
-            android:enabled="@{!bench.executing}"
-            android:onClick="@{() -> bench.onExecute()}"
+            android:enabled="@{!bench.executing &amp;&amp; bench.config.downloadOK}"
+            android:onClick="@{(view) -> bench.onExecute(view)}"
             />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
