--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -198,5 +198,17 @@
             android:onClick="@{(view) -> bench.onExecute(view)}"
             />
 
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="76dp"
+            android:layout_height="65dp"
+            app:layout_anchor="@+id/bench_button"
+            android:max="@{bench.config.downloadSize}"
+            android:progress="@{bench.config.downloaded}"
+            android:indeterminate="false"
+            android:visibility="@{bench.config.downloaded > 0 ? view.VISIBLE : view.GONE}"
+            app:layout_anchorGravity="center" />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
