--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -192,6 +192,7 @@
             android:layout_width="wrap_content"
             android:id="@+id/bench_button"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/bench_execute"
             app:srcCompat="@android:drawable/ic_media_play"
             app:layout_anchor="@id/bottomAppBar"
             android:enabled="@{!bench.executing &amp;&amp; bench.config.downloadOK}"
